<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTitleArea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">




    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/movie_poster_content_desc"
                android:fitsSystemWindows="true"
                android:scaleType="center" />

            <RatingBar
                android:id="@+id/movieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="3" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/MyTextLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvTitleValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyTextValueStyle"
                    android:layout_toRightOf="@id/tvTitle"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">


                <TextView
                    android:id="@+id/txtReleaseDateTitle"
                    style="@style/MyTextLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/title_release_date" />

                <TextView
                    android:id="@+id/txtReleaseDateValue"
                    style="@style/MyTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtReleaseDateTitle" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/txtLanguageTitle"
                    style="@style/MyTextLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/title_language" />

                <TextView
                    android:id="@+id/txtLanguageValue"
                    style="@style/MyTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtLanguageTitle" />

            </RelativeLayout>

            <TextView
                style="@style/MyTextLableStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_overview" />

            <TextView
                android:id="@+id/txtOverview"
                style="@style/MyTextValueStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="8dp"
                android:maxLines="5"
                android:padding="@dimen/activity_horizontal_margin" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_white" />

</RelativeLayout>
